--- a/static/src/css/partials/section_bio.css
+++ b/static/src/css/partials/section_bio.css
@@ -1,9 +1,8 @@
-.footer {
-  background: #333;
-  color: white;
+.bio {
+  background: #F3F2F0;
   padding: 30px 0;
 }
-.footer-row {
+.bio__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,26 +10,33 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
-.footer__row {
+.bio__figure {
+  width: 200px;
+}
+.bio__img {
+  max-width: 150px;
+  height: auto;
+}
+.bio__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  gap: 10px;
-}
-.footer__col {
+  gap: 15px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+.bio__top_logo {
+  max-width: 180px;
+  height: auto;
+}
+.bio__info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,17 +44,44 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  gap: 6px;
 }
-.footer__title {
-  font-size: 42px;
+.bio__title {
+  font-size: 21px;
+}
+.bio__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.bio__link {
+  color: black;
+  border-bottom: 1px solid black;
+  max-width: 87px;
 }
 
-.social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+@media (min-width: 768px) {
+  .bio {
+    padding: 50px 0;
+  }
+  .bio__row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .bio__bottom {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
